--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               enthusiasts, and anyone who just loves tiny, detailed machines.</p>
 
             </p>
-            <button class="cn"><a> Shop Now</a></button>
+            <button class="cn"><a> Sho  p Now</a></button>
         <div class="content_2"> 
             <h1><br>Why <span>Shop</span> with us?</h1>
             
@@ -55,6 +55,19 @@
     </div>
     <div class="best">
         <h1>Best Sellers</h1>
+        <div class="slider-container">
+            <button class="slider-btn ">&#10094;</button>
+            <div class="slider">
+                <img src="1.jpg" alt="Best Seller 1">
+                <img src="img1.jpg" alt="Best Seller 2">
+                <img src="img1.jpg" alt="Best Seller 3">
+                <img src="img1.jpg" alt="Best Seller 4">
+            </div>
+            <button class="slider-btn next">&#10095;</button>
+    
+
+
+        </div>
 
     </div>
     <div class="contacts">
