--- a/product.html
+++ b/product.html
@@ -34,52 +34,43 @@
         <div class="categories__container swiper">
             <div class="swiper-wrapper">
                 <a href="shop.html" class="category__item swiper-slide">
-                    <img src="assets/images/item1.jpeg" alt="" class="category__img">
+                    <img src="FandF.png" alt="" class="category__img">
 
-                    <h3 class="category__title">2005 First Editions</h3>
+                    <h3 class="category__title">Fast and Furious Nissan Skyline</h3>
                 </a>
 
                 <a href="shop.html" class="category__item swiper-slide">
-                    <img src="assets/images/item1.jpeg" alt="" class="category__img">
+                    <img src="Deadpool.png" alt="" class="category__img">
 
-                    <h3 class="category__title">2006 First Editions</h3>
+                    <h3 class="category__title">Deadpool <br> Collab</h3>
                 </a>
 
                 <a href="shop.html" class="category__item swiper-slide">
-                    <img src="assets/images/item1.jpeg" alt="" class="category__img">
+                    <img src="Barbie.png" alt="" class="category__img">
 
-                    <h3 class="category__title">2008 Collectors Edition</h3>
+                    <h3 class="category__title">Barbie Limited Edition</h3>
                 </a>
 
                 <a href="shop.html" class="category__item swiper-slide">
-                    <img src="assets/images/item1.jpeg" alt="" class="category__img">
+                    <img src="F40.png" alt="" class="category__img">
 
-                    <h3 class="category__title">2009 Collector Edition</h3>
+                    <h3 class="category__title">Ferrari F40</h3>
                 </a>
 
                 <a href="shop.html" class="category__item swiper-slide">
-                    <img src="assets/images/item1.jpeg" alt="" class="category__img">
+                    <img src="topgun.png" alt="" class="category__img">
 
-                    <h3 class="category__title">2010 Collector Edition</h3>
+                    <h3 class="category__title">Top Gun Maverick Jet <br> Collector Edition</h3>
+                    </h3>
                 </a>
 
                 <a href="shop.html" class="category__item swiper-slide">
-                    <img src="assets/images/item1.jpeg" alt="" class="category__img">
+                    <img src="Scooby.png" alt="" class="category__img">
 
-                    <h3 class="category__title">2011 Collector Edition</h3>
+                    <h3 class="category__title">Scooby Doo Limited Edition</h3>
                 </a>
 
-                <a href="shop.html" class="category__item swiper-slide">
-                    <img src="assets/images/item1.jpeg" alt="" class="category__img">
-
-                    <h3 class="category__title">2012 Collector Edition</h3>
-                </a>
-
-                <a href="shop.html" class="category__item swiper-slide">
-                    <img src="assets/images/item1.jpeg" alt="" class="category__img">
-
-                    <h3 class="category__title">2013 Collector Edition</h3>
-                </a>
+               
             </div>
             <div class="swiper-button-next"><i class="fi fi-rr-angle-small-right"></i></div>
             <div class="swiper-button-prev"><i class="fi fi-rr-angle-small-left"></i></div>
