--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
 
     <!--===== CATEGORIES ======-->
     <section class="categories container section">
-        <h3 class="section__title"><span>Popular</span> Categories</h3>
+        <h3 class="section__title"><span>Popular</span> Products</h3>
 
         <div class="categories__container swiper">
             <div class="swiper-wrapper">
